@@ -81,14 +81,6 @@ QC1_FILE="OMIMqc1"
 QC2_FILE="OMIMqc2"
 DAG_ROOT_ID=""
 
-# TR11423/human-disease-portal (HDP)
-# disease-cluster files
-DCLUSTER_FILE="${RUNTIME_DIR}/OMIM.clusters"
-DCLUSTER_FILENAME="OMIM.clusters.synonym"
-DCLUSTERSYN_FILE="${RUNTIME_DIR}/${DCLUSTER_FILENAME}"
-DCLUSTERDIFF1_FILE="${RUNTIME_DIR}/OMIM.clusters.diff1"
-DCLUSTERDIFF2_FILE="${RUNTIME_DIR}/OMIM.clusters.diff2"
-
 export DOWNLOAD_FILE_DIR
 export COMPRESSED_OMIM_FILE
 export OMIM_FILE
@@ -102,10 +94,4 @@ export ANIMALMODEL_FILE
 export QC1_FILE
 export QC2_FILE
 export DAG_ROOT_ID
-
-export DCLUSTER_FILE
-export DCLUSTERSYN_FILENAME
-export DCLUSTERSYN_FILE
-export DCLUSTERDIFF1_FILE
-export DCLUSTERDIFF2_FILE
 
