@@ -219,11 +219,6 @@ executeExtra()
       loadSynonym.sh $1 ${SYNONYM_FILE}
   fi
 
-  #if [ "${DCLUSTER_FILE}" != "" ]
-  #then
-      #loadOBO-DC.sh $1
-  #fi
-
   if [ "${TOPOLOGICAL_SORT}" = "true" ]
   then
       loadTopSort.sh $1
